--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             text-align: center;
             font-size: 36px;
             margin-bottom: 60px;
-            color: #ff5a5a;
+            color: #fff;
             text-transform: uppercase;
             letter-spacing: 3px;
             position: relative;
