--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         body {
             overflow-x: hidden;
             height: calc(200vh - 250px);
-            background: #fff;
+            background: #1a1a2e;
             color: #fff;
         }
         
