--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             justify-content: space-between;
             align-items: center;
             z-index: 1000;
-            background: rgba(10, 10, 25, 0.95);
+            background: #1a1a2e(10, 10, 25, 0.95);
             backdrop-filter: blur(10px);
             box-shadow: 0 5px 30px rgba(0, 0, 0, 0.3);
             border-bottom: 1px solid rgba(255, 255, 255, 0.1);
