--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         body {
             background-color: #afe0c9;
-            background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100"><rect width="100" height="100" fill="%23afe0c9"/><path d="M0 50 Q25 30,50 50 T100 50" fill="none" stroke="%2385c7b2" stroke-width="2"/><path d="M0 30 Q25 10,50 30 T100 30" fill="none" stroke="%2385c7b2" stroke-width="1.5"/><path d="M0 70 Q25 90,50 70 T100 70" fill="none" stroke="%2385c7b2" stroke-width="1.5"/></svg>');
+            background-image: urlurl(../images/back29.png) repeat;
             background-size: 300px;
             min-height: 100vh;
             display: flex;
