--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Одностраничный сайт - Шапка</title>
     <link href="https://fonts.googleapis.com/css2?family=Economica:wght@400;700&display=swap" rel="stylesheet">
     <style>
+@font-face {
+    font-family: 'economicaregular';
+    src: url('fonts/eco-webfont.eot');
+    src: url('fonts/eco-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/eco-webfont.woff') format('woff'),
+         url('fonts/eco-webfont.ttf') format('truetype'),
+         url('fonts/eco-webfont.svg#economicaregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
         * {
             margin: 0;
             padding: 0;
