--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         /* Логотип */
         .logo {
             font-size: 44px;
-            font-family: 'Economica', 'Segoe UI', "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif;
+            font-family: 'economicaregular', Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif;
             color: #FFF;
             text-shadow: 2px 2px 2px #d31d6a;
             margin: 10px 0;
