--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <style>
 @font-face {
     font-family: 'economicaregular';
-    src: url('fonts/eco-webfont.eot');
-    src: url('fonts/eco-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/eco-webfont.woff') format('woff'),
-         url('fonts/eco-webfont.ttf') format('truetype'),
-         url('fonts/eco-webfont.svg#economicaregular') format('svg');
+    src: url('../fonts/eco-webfont.eot');
+    src: url('../fonts/eco-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/eco-webfont.woff') format('woff'),
+         url('../fonts/eco-webfont.ttf') format('truetype'),
+         url('../fonts/eco-webfont.svg#economicaregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
