--- a/index.html
+++ b/index.html
@@ -6,16 +6,6 @@
     <title>Одностраничный сайт - Шапка</title>
     <link href="https://fonts.googleapis.com/css2?family=Economica:wght@400;700&display=swap" rel="stylesheet">
     <style>
-@font-face {
-    font-family: 'economicaregular';
-    src: url('../fonts/eco-webfont.eot');
-    src: url('../fonts/eco-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/eco-webfont.woff') format('woff'),
-         url('../fonts/eco-webfont.ttf') format('truetype'),
-         url('../fonts/eco-webfont.svg#economicaregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
         * {
             margin: 0;
             padding: 0;
@@ -26,7 +16,8 @@
             background-color: #afe0c9;
             background-image: url('../images/back29.png');
             background-repeat: repeat;
-            min-height: 100vh;            
+            min-height: 100vh;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             display: flex;
             justify-content: center;
             align-items: flex-start;
@@ -54,7 +45,7 @@
         /* Логотип */
         .logo {
             font-size: 44px;
-            font-family: 'economicaregular', Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif;
+            font-family: 'Economica', 'Segoe UI', "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif;
             color: #FFF;
             text-shadow: 2px 2px 2px #d31d6a;
             margin: 10px 0;
