--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         body {
             background-color: #afe0c9;
-            background-image: url('../images/back29.png');
+            background-image: url('images/back29.png');
             background-repeat: repeat;
             min-height: 100vh;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
