--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             color: #FFF;
             letter-spacing: 2px;
             text-align: left;
+			margin-top: 20px
         }
 
         .portfolio-text span {
