--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             color: #FFF;
             letter-spacing: 2px;
             text-align: left;
-			margin-top: 20px
+			margin-top: 20px;
         }
 
         .portfolio-text span {
@@ -120,6 +120,7 @@
             width: 40px;
             height: 30px;
             transition: all 0.3s ease;
+			margin-top: 20px;
         }
 
         .nav-image:hover {
