--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             display: flex;
             list-style: none;
             flex-wrap: wrap;
-            margin-bottom: 10px;
+            margin-bottom: 30px;
         }
 
         nav ul li {
@@ -120,8 +120,7 @@
             width: 40px;
             height: 30px;
             transition: all 0.3s ease;
-			margin-top: 20px;
-        }
+		}
 
         .nav-image:hover {
             transform: scale(1.1);
@@ -187,7 +186,7 @@
             <div class="logo-container">
                 <div class="logo">Одностраничный Сайт</div>
                 <div class="portfolio-text">
-                    <span>p</span>ortfolio
+                    /<span>p</span>ortfolio
                 </div>
             </div>
             
