--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             display: flex;
             list-style: none;
             flex-wrap: wrap;
+			margin-top: 20px;
             margin-bottom: 30px;
         }
 
