--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
             width: 40px;
             height: 30px;
             transition: all 0.3s ease;
-			margin-top: 20px;
+			margin-top: 10px;
+			margin-right: 30px;
 		}
 
         .nav-image:hover {
@@ -187,7 +188,7 @@
             <div class="logo-container">
                 <div class="logo">Одностраничный Сайт</div>
                 <div class="portfolio-text">
-                    /<span>p</span>ortfolio
+                    <span>p</span>ortfolio
                 </div>
             </div>
             
