--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             color: #FFF;
             letter-spacing: 2px;
             text-align: left;
-			margin-top: 20px;
+			margin-top: 30px;
         }
 
         .portfolio-text span {
@@ -188,7 +188,7 @@
             <div class="logo-container">
                 <div class="logo">Одностраничный Сайт</div>
                 <div class="portfolio-text">
-                    <span>p</span>ortfolio
+                    /<span>p</span>ortfolio
                 </div>
             </div>
             
