--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             align-items: flex-end;
             justify-content: flex-end;
             height: 100%;
-            transform: translateY(10px);
+            /* transform: translateY(10px); */
         }
 
         /* Меню */
@@ -188,7 +188,7 @@
             <div class="logo-container">
                 <div class="logo">Одностраничный Сайт</div>
                 <div class="portfolio-text">
-                    /<span>p</span>ortfolio
+                    <span>p</span>ortfolio
                 </div>
             </div>
             
