--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
         /* Галерея украшений */
         .gallery {
             display: flex;
+			gap: 5px;
             justify-content: space-between;
             margin-top: 30px;
             width: 100%;
@@ -263,7 +264,7 @@
                 <div class="logo-container">
                     <div class="logo">Одностраничный Сайт</div>
                     <div class="portfolio-text">
-                        /<span>p</span>ortfolio
+                        <span>p</span>ortfolio
                     </div>
                 </div>
                 
