--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         .window-gap {
             position: relative;
             height: 310px;
-            background: url('images/back_1.jpg') no-repeat center center;
+            background: url('images/back_1.jpg') no-repeat center center/cover;
             background-size: cover;
             background-attachment: fixed;
             z-index: 0;
