--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
     
     <!-- Окно между секциями - ТЕПЕРЬ С ВИДИМЫМ ИЗОБРАЖЕНИЕМ -->
     <div class="window-gap" id="window-gap">
-        <img src="images/back_1.jpg" alt="Фоновое изображение">
+        <img src="images/oeuvre2.jpg" alt="Фоновое изображение">
     </div>
     
     <!-- Секция Rings -->
@@ -446,7 +446,7 @@
                     <img src="images/section_2.jpg" alt="Кольцо 1">
                 </div>
                 <div class="ring-image">
-                    <img src="images/section_22.jpg" alt="Кольцо 2">
+                    <img src="images/oeuvre2.jpg" alt="Кольцо 2">
                 </div>
             </div>
         </div>
