--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
         <div class="rings-container">
             <div class="rings-content">
                 <div class="ring-image">
-                    <img src="images/section2.jpg" alt="Кольцо 1">
+                    <img src="images/oeuvre2.jpg" alt="Кольцо 1">
                 </div>
                 <div class="ring-image">
                     <img src="images/section22.jpg" alt="Кольцо 2">
