--- a/index.html
+++ b/index.html
@@ -164,11 +164,11 @@
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
         }
 
-        /* Первая секция с фоном */
+        /* Первая секция с фоном - ДОБАВЛЕН PADDING */
         .first-section {
             position: relative;
             min-height: 100vh;
-            padding-top: 150px;
+            padding: 160px 0 10px 0; /* Было padding-top: 150px */
             background-color: #afe0c9;
             background-image: url('images/back29.png');
             background-repeat: repeat;
@@ -185,7 +185,7 @@
             z-index: 2;
         }
 
-        /* Новая секция Rings */
+        /* Новая секция Rings - ДОБАВЛЕН PADDING */
         #rings-section {
             min-height: 100vh;
             background-color: #afe0c9;
@@ -193,7 +193,7 @@
             background-repeat: repeat;
             display: flex;
             align-items: center;
-            padding: 50px 0;
+            padding: 60px 0 10px 0; /* Было padding: 50px 0 */
             position: relative;
             z-index: 3;
         }
@@ -368,7 +368,7 @@
             <div class="logo-container">
                 <div class="logo">Одностраничный Сайт</div>
                 <div class="portfolio-text">
-                    <span>p</span>ortfolio
+                    ////<span>p</span>ortfolio
                 </div>
             </div>
             
