--- a/index.html
+++ b/index.html
@@ -408,6 +408,12 @@
             margin-bottom: 5px;
             letter-spacing: 2px; /* Уменьшенное расстояние между буквами */
         }
+		
+		/* Новые стили для уменьшения ширины букв */
+			display: inline-block;
+			transform: scaleX(0.7);
+			transform-origin: left;
+	}
 
         .title-bottom {
             font-size: 20px;
@@ -471,6 +477,11 @@
                 text-align: center;
                 align-items: center;
             }
+			
+			.title-top {
+				transform: none;
+				display: block;
+			}
             
             .logo-container, .nav-container {
                 align-items: center;
@@ -552,6 +563,11 @@
             .logo {
                 font-size: 28px;
             }
+			
+			.title-top {
+				font-size: 28px;
+				line-height: 1.2;
+			}
             
             nav ul li a {
                 font-size: 16px;
