--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             width: 75px;
             height: 75px;
             cursor: pointer;
-            border: 2px solid transparent;
+            border: 2px solid #16126b;
             transition: all 0.3s;
         }
 
@@ -321,7 +321,7 @@
         }
 
         .thumbnail.active {
-            border-color: #16126b;
+            border-color: #d31d6a;
             transform: scale(1.05);
             box-shadow: 0 0 8px rgba(0,0,0,0.3);
         }
@@ -451,6 +451,10 @@
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+			font-weight: bold;
+			text-shadow: 1px 1px 1px #FFF;
+
+
         }
 
         /* Адаптивность */
@@ -657,7 +661,7 @@
                     <span class="narrow-letters">Одностраничный Сайт</span>
                 </div>
                 <div class="portfolio-text">
-                    <span>p</span>ortfolio
+                    /<span>p</span>ortfolio
                 </div>
             </div>
             
