--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             display: grid;
             grid-template-columns: repeat(3, 75px);
             grid-template-rows: repeat(4, 75px);
-            gap: 6px;
+            gap: 17px;
             width: calc(75px * 3 + 6px * 2);
         }
 
@@ -324,6 +324,10 @@
             cursor: pointer;
             border: 2px solid #16126b;
             transition: all 0.3s;
+			
+			 /* Добавленный отступ и фон */
+			 padding: 2px;
+			 background: white;
         }
 
         .thumbnail:hover {
@@ -341,6 +345,12 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+			/* Учитываем padding в размерах */
+			box-sizing: border-box;
+			pointer-events: none;
+			user-select: none;
+			-webkit-user-drag: none;
+			
             /* Добавлено для запрета действий с изображением */
             pointer-events: none;
             user-select: none;
