--- a/index.html
+++ b/index.html
@@ -326,8 +326,9 @@
             transition: all 0.3s;
 			
 			 /* Добавленный отступ и фон */
-			 padding: 2px;
-			 background: white;
+			 padding: 2px;			 
+			 background: #f5f5f5;
+			 opacity: 0.4;
         }
 
         .thumbnail:hover {
