--- a/index.html
+++ b/index.html
@@ -327,8 +327,9 @@
 			
 			 /* Добавленный отступ и фон */
 			 padding: 2px;			 
-			 background: #f5f5f5;
-			 opacity: 0.4;
+			 background: #ffffff;
+			 z-index: -1;
+			 opacity: 0.6;
         }
 
         .thumbnail:hover {
