--- a/index.html
+++ b/index.html
@@ -327,9 +327,7 @@
 			
 			 /* Добавленный отступ и фон */
 			 padding: 2px;			 
-			 background: #ffffff;
-			 z-index: -1;
-			 opacity: 0.4;
+			 background: #f5f5f5;
         }
 
         .thumbnail:hover {
