--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
         // ===== GALLERY FUNCTIONALITY =====
         // Ring gallery data
         const ringTitles = [
-            { top: "rerrrony", bottom: "Diamond & Platinum" },
+            { top: "r2errrony", bottom: "Diamond & Platinum" },
             { top: "Eternal Bloom", bottom: "Sapphire & Gold" },
             { top: "Twilight Spark", bottom: "Emerald & Silver" },
             { top: "Ocean Whisper", bottom: "Aquamarine & White Gold" },
